hphp/test/zend/good/ext/filter/tests/bug50632.php.skipif
<?php if (!extension_loaded("filter")) die("skip"); ?>