hphp/test/zend/bad/ext/standard/tests/network/inet.php.skipif
<?php 
if (!function_exists("inet_ntop")) die("skip no inet_ntop()"); 
if (!function_exists("inet_pton")) die("skip no inet_pton()"); 
?>